further simplify the logger and enhance its clarity, completing the major structure of the logging tutorial

--- a/developer_notes/database.ipynb
+++ b/developer_notes/database.ipynb
@@ -860,8 +860,8 @@
    ],
    "source": [
     "# we will use the retriever to find top_k chunked documents, from its partent_doc_id, we will find the initial dialog_turn, and feed that to the generator\n",
-    "from lightrag.utils.logger import enable_library_logging\n",
-    "enable_library_logging()\n",
+    "from lightrag.utils.logger import get_logger\n",
+    "get_logger()\n",
     "\n",
     "embeddings = [item.vector for item in dialog_turn_db.transformed_items[key]]\n",
     "print(embeddings)\n",
@@ -948,9 +948,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
