--- a/developer_notes/embedder.ipynb
+++ b/developer_notes/embedder.ipynb
@@ -594,9 +594,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
