--- a/use_cases/generator/basic.ipynb
+++ b/use_cases/generator/basic.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "# first, let's set up the library log just in case, in default at INFO level\n",
-    "from utils.logger import enable_library_logging\n",
-    "enable_library_logging()"
+    "from utils.logger import get_logger\n",
+    "get_logger()"
    ]
   },
   {
