--- a/developer_notes/component.ipynb
+++ b/developer_notes/component.ipynb
@@ -35,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.utils import enable_library_logging\n",
-    "enable_library_logging()"
+    "from lightrag.utils import get_logger\n",
+    "get_logger()"
    ]
   },
   {
