--- a/use_cases/generator/intermediate.ipynb
+++ b/use_cases/generator/intermediate.ipynb
@@ -59,8 +59,8 @@
    "outputs": [],
    "source": [
     "# Let's turn on the library log to help with debugging.\n",
-    "from lightrag.utils import enable_library_logging\n",
-    "enable_library_logging()"
+    "from lightrag.utils import get_logger\n",
+    "get_logger()"
    ]
   },
   {
