rename the developer_notes code directory to tutorials

--- a/tutorials/retriever.ipynb
+++ b/tutorials/retriever.ipynb
@@ -1312,7 +1312,7 @@
     "\n",
     "# 1. set up the tracing for failed call as the retriever has generator attribute\n",
     "\n",
-    "@trace_generator_call(save_dir=\"developer_notes/traces\")\n",
+    "@trace_generator_call(save_dir=\"tutorials/traces\")\n",
     "class LoggedLLMRetriever(LLMRetriever):\n",
     "    pass\n",
     "top_k = 2\n",
@@ -2175,7 +2175,7 @@
    "outputs": [],
    "source": [
     "# save the db states, including the original documents with len 1, and transformed documents\n",
-    "db.save_state(\"developer_notes/db_states.pkl\")"
+    "db.save_state(\"tutorials/db_states.pkl\")"
    ]
   },
   {
@@ -2325,7 +2325,7 @@
    "source": [
     "# construct the db\n",
     "\n",
-    "restored_db = LocalDB.load_state(\"developer_notes/db_states.pkl\")\n",
+    "restored_db = LocalDB.load_state(\"tutorials/db_states.pkl\")\n",
     "restored_db"
    ]
   },
@@ -2626,7 +2626,7 @@
    "source": [
     "# save the index\n",
     "\n",
-    "path = \"developer_notes/bm25_index.json\"\n",
+    "path = \"tutorials/bm25_index.json\"\n",
     "retriever.save_to_file(path)"
    ]
   },
