--- a/tutorials/rag.ipynb
+++ b/tutorials/rag.ipynb
@@ -11,18 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_processing config\n",
-    "\n",
-    "config = {\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -30,7 +18,7 @@
     "# the data pipeline and the backend data processing\n",
     "from lightrag.core.embedder import Embedder \n",
     "from lightrag.core.types import ModelClientType\n",
-    "from lightrag.components.data_process import DocumentSplitter, ToEmbeddings\n",
+    "from lightrag.components.data_process import TextSplitter, ToEmbeddings\n",
     "from lightrag.core.component import Sequential\n",
     "\n",
     "def prepare_data_pipeline():\n",
@@ -46,7 +34,7 @@
     "        \"split_overlap\": 10\n",
     "    }\n",
     "\n",
-    "    splitter = DocumentSplitter(**splitter_config)\n",
+    "    splitter = TextSplitter(**splitter_config)\n",
     "    embedder = Embedder(model_client =ModelClientType.OPENAI(), model_kwargs=model_kwargs)\n",
     "    embedder_transformer = ToEmbeddings(embedder, batch_size=2)\n",
     "    data_transformer = Sequential(splitter, embedder_transformer)\n",
