add litellm support, checking step

--- a/use_cases/generator/basic.ipynb
+++ b/use_cases/generator/basic.ipynb
@@ -32,13 +32,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lightrag'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# first, let's set up the library log just in case, in default at INFO level\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlightrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_logger\n\u001b[0;32m      3\u001b[0m get_logger()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lightrag'"
+     ]
+    }
+   ],
    "source": [
     "# first, let's set up the library log just in case, in default at INFO level\n",
-    "from utils.logger import get_logger\n",
+    "from lightrag.utils.logger import get_logger\n",
     "get_logger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lightrag'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlightrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Generator\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlightrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcomponents\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_client\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAIClient\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlightrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m setup_env \u001b[38;5;66;03m# ensure you have .env with OPENAI_API_KEY\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lightrag'"
+     ]
+    }
+   ],
+   "source": [
+    "from lightrag.core import Generator\n",
+    "from lightrag.components.model_client import OpenAIClient\n",
+    "from lightrag.utils import setup_env # ensure you have .env with OPENAI_API_KEY\n"
    ]
   },
   {
@@ -61,9 +96,6 @@
     }
    ],
    "source": [
-    "from lightrag.core import Generator\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.utils import setup_env # ensure you have .env with OPENAI_API_KEY\n",
     "\n",
     "query = \"What is the capital of France?\"\n",
     "model_kwargs = {\n",
@@ -263,9 +295,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-project-kernel",
+   "display_name": ".venv",
    "language": "python",
-   "name": "my-project-kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
