--- a/use_cases/generator/intermediate.ipynb
+++ b/use_cases/generator/intermediate.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RootLogger root (INFO)>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's turn on the library log to help with debugging.\n",
     "from lightrag.utils import get_logger\n",
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,56 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-06-09 23:13:16 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: ['input_str']\n",
-      "2024-06-09 23:13:16 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: ['input_str']\n",
-      "Content between <SYS> tags:  You are a doctor \n",
-      "Content between <SYS> tags:  You are a lawyer \n",
-      "{'doctor': ' You are a doctor ', 'lawyer': ' You are a lawyer ', 'other': 'Choose me the question does not apply to other choices.'}\n",
-      "2024-06-09 23:13:16 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: ['input_str', 'choices']\n"
+     "ename": "ValueError",
+     "evalue": "Environment variable OPENAI_API_KEY must be set",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Initiate the task component, and print the task details.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m task \u001b[38;5;241m=\u001b[39m \u001b[43mChatBotWithRouter\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m task\n",
+      "Cell \u001b[1;32mIn[46], line 10\u001b[0m, in \u001b[0;36mChatBotWithRouter.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      4\u001b[0m model_1_kwargs \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      6\u001b[0m }\n\u001b[0;32m      7\u001b[0m model_2_kwargs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mllama3-8b-8192\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdoc \u001b[38;5;241m=\u001b[39m Generator(\n\u001b[0;32m      9\u001b[0m     template\u001b[38;5;241m=\u001b[39mtemplate_doc,\n\u001b[1;32m---> 10\u001b[0m     model_client\u001b[38;5;241m=\u001b[39m\u001b[43mOpenAIClient\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[0;32m     11\u001b[0m     model_kwargs\u001b[38;5;241m=\u001b[39mmodel_1_kwargs,\n\u001b[0;32m     12\u001b[0m )\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlawyer \u001b[38;5;241m=\u001b[39m Generator(\n\u001b[0;32m     14\u001b[0m     template\u001b[38;5;241m=\u001b[39mtemplate_law,\n\u001b[0;32m     15\u001b[0m     model_client\u001b[38;5;241m=\u001b[39mGroqAPIClient(),\n\u001b[0;32m     16\u001b[0m     model_kwargs\u001b[38;5;241m=\u001b[39mmodel_2_kwargs,\n\u001b[0;32m     17\u001b[0m )\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrouter_choices \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoctor\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcreate_generator_signature(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdoc),\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlawyer\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcreate_generator_signature(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlawyer),\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mother\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoose me the question does not apply to other choices.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     22\u001b[0m }\n",
+      "File \u001b[1;32m~\\Documents\\molo\\LightRAG\\lightrag\\lightrag\\utils\\lazy_import.py:110\u001b[0m, in \u001b[0;36mLazyImport.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    108\u001b[0m log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCreating class instance: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclass_\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# normal class initialization\u001b[39;00m\n\u001b[1;32m--> 110\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclass_\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\molo\\LightRAG\\lightrag\\lightrag\\components\\model_client\\openai_client.py:99\u001b[0m, in \u001b[0;36mOpenAIClient.__init__\u001b[1;34m(self, api_key, chat_completion_parser)\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_api_key \u001b[38;5;241m=\u001b[39m api_key\n\u001b[1;32m---> 99\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msync_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minit_sync_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39masync_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# only initialize if the async call is called\u001b[39;00m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchat_completion_parser \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    102\u001b[0m     chat_completion_parser \u001b[38;5;129;01mor\u001b[39;00m get_first_message_content\n\u001b[0;32m    103\u001b[0m )\n",
+      "File \u001b[1;32m~\\Documents\\molo\\LightRAG\\lightrag\\lightrag\\components\\model_client\\openai_client.py:108\u001b[0m, in \u001b[0;36mOpenAIClient.init_sync_client\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    106\u001b[0m api_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_api_key \u001b[38;5;129;01mor\u001b[39;00m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    107\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m api_key:\n\u001b[1;32m--> 108\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnvironment variable OPENAI_API_KEY must be set\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    109\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m OpenAI(api_key\u001b[38;5;241m=\u001b[39mapi_key)\n",
+      "\u001b[1;31mValueError\u001b[0m: Environment variable OPENAI_API_KEY must be set"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ChatBotWithRouter(\n",
-       "  (doc): Generator(\n",
-       "    model_kwargs={'model': 'gpt-3.5-turbo'}, model_type=ModelType.LLM\n",
-       "    (prompt): Prompt(template: <SYS> You are a doctor </SYS> User: {{input_str}}, prompt_variables: ['input_str'])\n",
-       "    (model_client): OpenAIClient()\n",
-       "  )\n",
-       "  (lawyer): Generator(\n",
-       "    model_kwargs={'model': 'llama3-8b-8192'}, model_type=ModelType.LLM\n",
-       "    (prompt): Prompt(template: <SYS> You are a lawyer </SYS> User: {{input_str}}, prompt_variables: ['input_str'])\n",
-       "    (model_client): GroqAPIClient()\n",
-       "  )\n",
-       "  (router): Generator(\n",
-       "    model_kwargs={'model': 'gpt-3.5-turbo'}, model_type=ModelType.LLM\n",
-       "    (prompt): Prompt(\n",
-       "      template: <SYS> You are a router who will route a user question to the right generator.\n",
-       "                  Here are your choices in form of key: value pairs:\n",
-       "                   {% for key, value in choices.items() %}\n",
-       "                      {{ key }}: {{ value }}\n",
-       "                   {% endfor %}\n",
-       "                  Output the key of your choice.\n",
-       "                  </SYS> User question: {{input_str}}\n",
-       "                  You:\n",
-       "                  , prompt_variables: ['input_str', 'choices']\n",
-       "    )\n",
-       "    (model_client): OpenAIClient()\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -537,9 +515,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-project-kernel",
+   "display_name": ".venv",
    "language": "python",
-   "name": "my-project-kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -551,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
