--- a/use_cases/example.ipynb
+++ b/use_cases/example.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "\n",
     "\n",
-    "os.environ['GROQ_API_KEY'] = \"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\"\n",
+    "os.environ['GROQ_API_KEY'] = \"\"\n",
     "response = completion(\n",
     "    model=\"groq/gemma2-9b-it\", \n",
     "    messages=[\n",
@@ -122,7 +122,7 @@
    "source": [
     "from litellm import embedding\n",
     "import os\n",
-    "os.environ['HUGGINGFACE_API_KEY'] = \"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\"\n",
+    "os.environ['HUGGINGFACE_API_KEY'] = \"\"\n",
     "response = embedding(\n",
     "    model='huggingface/microsoft/codebert-base', \n",
     "    input=[\"good morning from litellm\"],\n",
