--- a/tutorials/rag.ipynb
+++ b/tutorials/rag.ipynb
@@ -19,7 +19,7 @@
     "from lightrag.core.embedder import Embedder \n",
     "from lightrag.core.types import ModelClientType\n",
     "from lightrag.components.data_process import TextSplitter, ToEmbeddings\n",
-    "from lightrag.core.component import Sequential\n",
+    "from lightrag.core.container import Sequential\n",
     "\n",
     "def prepare_data_pipeline():\n",
     "    model_kwargs = {\n",
