change all lightrag in use cases to adalflow

--- a/use_cases/agent/react_agent.ipynb
+++ b/use_cases/agent/react_agent.ipynb
@@ -12,9 +12,9 @@
    "metadata": {},
    "source": [
     "# 1. Q&A Chatbot\n",
-    "In this tutorial, we will implement ``LightRAG ReAct`` to build a Q&A chatbot on [HotpotQA](https://arxiv.org/pdf/1809.09600) dataset. \n",
+    "In this tutorial, we will implement ``adalflow ReAct`` to build a Q&A chatbot on [HotpotQA](https://arxiv.org/pdf/1809.09600) dataset. \n",
     "\n",
-    "To learn more about ``LightRAG ReAct``, please refer to our developer notes."
+    "To learn more about ``adalflow ReAct``, please refer to our developer notes."
    ]
   },
   {
@@ -116,9 +116,9 @@
    "source": [
     "\n",
     "import dotenv\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.components.agent.react_agent import ReActAgent\n",
-    "from lightrag.core.tool_helper import FunctionTool\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.components.agent.react_agent import ReActAgent\n",
+    "from adalflow.core.tool_helper import FunctionTool\n",
     "\n",
     "import time\n",
     "\n",
@@ -136,7 +136,7 @@
     "## Tools\n",
     "Firstly, we need to specify what functions the agent will need to answer the question. In this case, we are answering the Wikipedia-based questions, we will allow the agent to **search** Wikipedia api. The [ReAct Paper](https://arxiv.org/pdf/2210.03629) includes a **lookup** function that serves as Ctrl+F functionality on the browser.\n",
     "\n",
-    "As ``LightRAG ReAct`` has a built in ``finish`` function, we don't need to define by ourselves."
+    "As ``adalflow ReAct`` has a built in ``finish`` function, we don't need to define by ourselves."
    ]
   },
   {
@@ -541,8 +541,8 @@
    ],
    "source": [
     "import importlib\n",
-    "import lightrag\n",
-    "importlib.reload(lightrag)\n"
+    "import adalflow\n",
+    "importlib.reload(adalflow)\n"
    ]
   },
   {
@@ -676,7 +676,7 @@
     }
    ],
    "source": [
-    "from lightrag.utils.logger import printc\n",
+    "from adalflow.utils.logger import printc\n",
     "\n",
     "num_questions = 5\n",
     "for i in range(num_questions):\n",
@@ -988,7 +988,7 @@
     }
    ],
    "source": [
-    "from lightrag.eval.answer_match_acc import AnswerMatchAcc\n",
+    "from adalflow.eval.answer_match_acc import AnswerMatchAcc\n",
     "\n",
     "# set up evaluation type\n",
     "EM_evaluator = AnswerMatchAcc(type=\"exact_match\")\n",
@@ -1255,7 +1255,7 @@
     }
    ],
    "source": [
-    "from lightrag.eval.answer_match_acc import AnswerMatchAcc\n",
+    "from adalflow.eval.answer_match_acc import AnswerMatchAcc\n",
     "\n",
     "# set up evaluation type\n",
     "EM_evaluator = AnswerMatchAcc(type=\"exact_match\")\n",
