--- a/use_cases/generator/basic.ipynb
+++ b/use_cases/generator/basic.ipynb
@@ -61,9 +61,9 @@
     }
    ],
    "source": [
-    "from lightrag.core import Generator\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.utils import setup_env # ensure you have .env with OPENAI_API_KEY\n",
+    "from adalflow.core import Generator\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.utils import setup_env # ensure you have .env with OPENAI_API_KEY\n",
     "\n",
     "query = \"What is the capital of France?\"\n",
     "model_kwargs = {\n",
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
