--- a/use_cases/generator/intermediate.ipynb
+++ b/use_cases/generator/intermediate.ipynb
@@ -27,10 +27,10 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "from lightrag.core import Component, Generator, Sequential\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.components.model_client import GroqAPIClient\n",
-    "from lightrag.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY"
+    "from adalflow.core import Component, Generator, Sequential\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.components.model_client import GroqAPIClient\n",
+    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY"
    ]
   },
   {
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
