--- a/use_cases/question_answering/chatbot.ipynb
+++ b/use_cases/question_answering/chatbot.ipynb
@@ -21,9 +21,9 @@
    "outputs": [],
    "source": [
     "# Import needed modules from LightRAG\n",
-    "from lightrag.core.component import Component\n",
-    "from lightrag.core.generator import Generator\n",
-    "from lightrag.core.memory import Memory"
+    "from adalflow.core.component import Component\n",
+    "from adalflow.core.generator import Generator\n",
+    "from adalflow.core.memory import Memory"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
     "OPENAI_API_KEY=\"YOUR_API_KEY\" # Replace with your OpenAI API Key, or you can put it in a .env file"
    ]
   },
