chore: Update imports to use `adalflow` instead of `lightrag`

--- a/tutorials/component.ipynb
+++ b/tutorials/component.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "from lightrag.core import Component, Generator\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.components.model_client import GroqAPIClient\n",
-    "from lightrag.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY"
+    "from adalflow.core import Component, Generator\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.components.model_client import GroqAPIClient\n",
+    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RootLogger root (INFO)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from lightrag.utils import get_logger\n",
+    "from adalflow.utils import get_logger\n",
     "get_logger()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,44 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-06-17 09:42:27 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: []\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DocQA(\n",
-       "  (doc): Generator(\n",
-       "    model_kwargs={'model': 'gpt-3.5-turbo'}, \n",
-       "    (prompt): Prompt(template: <SYS> You are a doctor </SYS> User: {{input_str}})\n",
-       "    (model_client): OpenAIClient()\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doc = DocQA()\n",
-    "doc"
-   ]
   },
   {
    "cell_type": "code",
@@ -252,13 +229,13 @@
    "outputs": [],
    "source": [
     "# save the serialized states to a file\n",
-    "from lightrag.utils.file_io import save_pickle, save_json\n",
+    "from adalflow.utils.file_io import save_pickle, save_json\n",
     "states = doc.to_dict()\n",
     "# save_json(states, \"doc.json\")\n",
     "save_pickle(states, \"doc.pkl\")\n",
     "\n",
     "# load the serialized states from a file\n",
-    "from lightrag.utils.file_io import load_pickle, load_json\n",
+    "from adalflow.utils.file_io import load_pickle, load_json\n",
     "states_loaded = load_pickle(\"doc.pkl\")\n",
     "# states_loaded = load_json(\"doc.json\")\n",
     "\n",
@@ -405,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.core.parameter import Parameter\n",
+    "from adalflow.core.parameter import Parameter\n",
     "\n",
     "doc.register_parameter(\"demo\", param=Parameter(data=\"demo\"))"
    ]
@@ -486,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.utils.file_io import save_json\n",
+    "from adalflow.utils.file_io import save_json\n",
     "\n",
     "save_json(doc.to_dict(), \"doc.json\")"
    ]
@@ -544,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,12 +529,12 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "<class 'lightrag.core.component.FunComponent'>\n"
+      "<class 'adalflow.core.component.FunComponent'>\n"
      ]
     }
    ],
    "source": [
-    "from lightrag.core.component import FunComponent\n",
+    "from adalflow.core.component import FunComponent\n",
     "\n",
     "def add_one(x):\n",
     "    return x + 1\n",
@@ -573,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -581,12 +558,12 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "<class 'lightrag.core.component.AddOneComponent'>\n"
+      "<class 'adalflow.core.component.AddOneComponent'>\n"
      ]
     }
    ],
    "source": [
-    "from lightrag.core.component import fun_to_component \n",
+    "from adalflow.core.component import fun_to_component \n",
     "\n",
     "fun_component = fun_to_component(add_one)\n",
     "print(fun_component(1))\n",
@@ -594,12 +571,12 @@
     "\n",
     "# output:\n",
     "# 2\n",
-    "# <class 'lightrag.core.component.AddOneComponent'>"
+    "# <class 'adalflow.core.component.AddOneComponent'>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +584,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "<class 'lightrag.core.component.AddOneComponent'>\n"
+      "<class 'adalflow.core.component.AddOneComponent'>\n"
      ]
     }
    ],
@@ -622,7 +599,7 @@
     "\n",
     "# output:\n",
     "# 2\n",
-    "# <class 'lightrag.core.component.AddOneComponent'>"
+    "# <class 'adalflow.core.component.AddOneComponent'>"
    ]
   },
   {
@@ -647,7 +624,7 @@
     }
    ],
    "source": [
-    "from lightrag.core.component import Sequential\n",
+    "from adalflow.core.component import Sequential\n",
     "\n",
     "@fun_to_component\n",
     "def enhance_query(query:str) -> str:\n",
