dataclass: Update imports to use `adalflow` instead of `lightrag`

--- a/tutorials/dataclass.ipynb
+++ b/tutorials/dataclass.ipynb
@@ -100,7 +100,7 @@
     "# lets see what DataClass can do \n",
     "# 1. allow required field after optional field using required_field on default_factory\n",
     "\n",
-    "from lightrag.core import DataClass, required_field\n",
+    "from adalflow.core import DataClass, required_field\n",
     "\n",
     "@dataclass\n",
     "class TrecData2(DataClass):\n",
@@ -265,7 +265,7 @@
    "source": [
     "# use with DataClassFormatType and format_example_str\n",
     "\n",
-    "from lightrag.core import DataClassFormatType\n",
+    "from adalflow.core import DataClassFormatType\n",
     "\n",
     "example_str = example.format_example_str(DataClassFormatType.EXAMPLE_JSON)\n",
     "print(example_str)\n",
@@ -466,7 +466,7 @@
    "source": [
     "# use the DataClassFormatType to control it \n",
     "\n",
-    "from lightrag.core import DataClassFormatType\n",
+    "from adalflow.core import DataClassFormatType\n",
     "\n",
     "json_signature = TrecData2.format_class_str(DataClassFormatType.SIGNATURE_JSON)\n",
     "print(json_signature)\n",
